# XJustiz2PDF

./: .gitignore  CHANGELOG.md  EXTERNAL_LICENSES_README.md  LICENSE  README.md  pyproject.toml  requirements.txt  xjustiz2pdf.py
Website/: index.html
code/: lookup.py  xJustiz2PDF321.py
code/lookups/: Aussonderungsart_1.0.xml
xjustiz2pdf/: __init__.py  __main__.py  converter.py  gs_pipeline.py  gui.py  gui_build.py  gui_helpers.py  gui_io.py  gui_status.py  gui_tree.py  parser - Kopie.py  parser.py  pdfbuilder.py  pdfbuilder_outline.py  pdfbuilder_selection.py  pdfbuilder_utils.py  register.py  utils.py  worker.py
